[gd_scene load_steps=19 format=2]

[ext_resource path="res://art/Pendulum/Compass_Needle.png" type="Texture" id=1]
[ext_resource path="res://art/Pendulum/Pendulum_Base_2.png" type="Texture" id=2]
[ext_resource path="res://art/Pendulum/Pendulum_Hinge_2.png" type="Texture" id=3]
[ext_resource path="res://art/Pendulum/Pendulum_Pen_2.png" type="Texture" id=4]
[ext_resource path="res://scenes/assets/Sprites/SecondArm.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/assets/Sprites/FirstArm.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/assets/Sprites/PendulumInk.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Pendulum.gd" type="Script" id=10]
[ext_resource path="res://art/Pendulum/Compass.png" type="Texture" id=11]
[ext_resource path="res://art/UI/Restart_Button.png" type="Texture" id=12]
[ext_resource path="res://art/UI/Menu_Button.png" type="Texture" id=13]
[ext_resource path="res://art/Pendulum/CompassSmall.png" type="Texture" id=14]
[ext_resource path="res://art/Backdrop.png" type="Texture" id=17]
[ext_resource path="res://OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=18]

[sub_resource type="World" id=1]

[sub_resource type="Theme" id=2]
/fonts/v = null

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="Theme" id=4]
/colors/Color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[node name="Pendulum" type="Node"]
script = ExtResource( 10 )
first_arm = ExtResource( 6 )
second_arm = ExtResource( 5 )
ink = ExtResource( 7 )
write_level = 9
num_rotations = 1.002

[node name="PendControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -540.0
margin_right = -320.0
margin_bottom = -500.0

[node name="ZNode" type="Node2D" parent="PendControl"]
z_index = 1

[node name="ViewportContainer" type="ViewportContainer" parent="PendControl/ZNode"]
margin_top = 180.0
margin_right = 720.0
margin_bottom = 900.0
stretch = true

[node name="Viewport" type="Viewport" parent="PendControl/ZNode/ViewportContainer"]
size = Vector2( 720, 720 )
handle_input_locally = false
msaa = 3
fxaa = true
debanding = true
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="PendulumBase" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport"]
visible = false
position = Vector2( 360, 360 )
scale = Vector2( 0.25, 0.25 )
z_index = 3

[node name="BaseArm" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase"]

[node name="PendulumHinge" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase"]
position = Vector2( 0, 252 )

[node name="HingeArm" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase/PendulumHinge"]

[node name="PendulumPen" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase/PendulumHinge"]
position = Vector2( 0, 196 )

[node name="PenSprite" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase/PendulumHinge/PendulumPen"]
scale = Vector2( 0.125, 0.125 )
z_index = 7
texture = ExtResource( 4 )

[node name="HingeSprite" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase/PendulumHinge"]
scale = Vector2( 0.125, 0.125 )
z_index = 5
texture = ExtResource( 3 )

[node name="BaseSprite" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/PendulumBase"]
scale = Vector2( 0.25, 0.25 )
z_index = 3
texture = ExtResource( 2 )

[node name="InkHolder" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport"]
z_index = 4

[node name="Compass" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport"]
visible = false
position = Vector2( 360, 612 )

[node name="CompassSmall" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/Compass"]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 0.125, 0.125 )
z_index = 8
texture = ExtResource( 14 )

[node name="CompassNeedle" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport/Compass"]

[node name="CompassNeedleSprite" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/Compass/CompassNeedle"]
position = Vector2( 0, -32 )
scale = Vector2( 0.125, 0.125 )
z_index = 8
texture = ExtResource( 1 )

[node name="BaseCompass" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport"]
visible = false
position = Vector2( 360, 612 )
scale = Vector2( 2, 2 )

[node name="CompassSprite" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/BaseCompass"]
position = Vector2( 0.5, -0.5 )
scale = Vector2( 0.094, 0.094 )
z_index = 8
texture = ExtResource( 11 )

[node name="CompassNeedle2" type="Node2D" parent="PendControl/ZNode/ViewportContainer/Viewport/BaseCompass"]

[node name="CompassNeedleSprite" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport/BaseCompass/CompassNeedle2"]
position = Vector2( 0, -32 )
scale = Vector2( 0.062, 0.062 )
z_index = 8
texture = ExtResource( 1 )

[node name="LevelOverlay" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport"]
position = Vector2( 360, 360 )
z_index = 2

[node name="Background" type="Sprite" parent="PendControl/ZNode/ViewportContainer/Viewport"]
show_behind_parent = true
position = Vector2( 397, 559 )
scale = Vector2( 4, 4 )
texture = ExtResource( 17 )

[node name="DetectionContainer" type="ViewportContainer" parent="PendControl"]
margin_top = 180.0
margin_right = 720.0
margin_bottom = 880.0

[node name="SubViewport" type="Viewport" parent="PendControl/DetectionContainer"]
size = Vector2( 720, 720 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
msaa = 2
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="ViewDrawContainer" type="ViewportContainer" parent="PendControl"]
margin_top = 180.0
margin_right = 720.0
margin_bottom = 880.0

[node name="SubViewport" type="Viewport" parent="PendControl/ViewDrawContainer"]
size = Vector2( 720, 720 )
own_world = true
world = SubResource( 1 )
transparent_bg = true
handle_input_locally = false
msaa = 2
hdr = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="ViewportContainer2" type="ViewportContainer" parent="PendControl"]
visible = false
margin_top = 180.0
margin_right = 720.0
margin_bottom = 900.0

[node name="Viewport" type="Viewport" parent="PendControl/ViewportContainer2"]
handle_input_locally = false
msaa = 2
render_target_update_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0
visible = false

[node name="InfoControl" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_right = -320.0
margin_bottom = 40.0

[node name="RotationsText" type="Label" parent="CanvasLayer/InfoControl"]
margin_left = 104.0
margin_top = 20.0
margin_right = 616.0
margin_bottom = 148.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_outline_modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_fonts/font = SubResource( 3 )
text = "Rotations: 1"
align = 1
valign = 1

[node name="LevelText" type="Label" parent="CanvasLayer/InfoControl"]
margin_left = 104.0
margin_top = -20.0
margin_right = 616.0
margin_bottom = 108.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_outline_modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_fonts/font = SubResource( 3 )
text = "Level: 1"
align = 1
valign = 1

[node name="DirectionText" type="Label" parent="CanvasLayer/InfoControl"]
margin_left = 104.0
margin_top = 60.0
margin_right = 616.0
margin_bottom = 188.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_outline_modulate = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_fonts/font = SubResource( 3 )
text = "Direction: Right"
align = 1
valign = 1

[node name="SideControl" type="Control" parent="CanvasLayer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="LeftPanel" type="Panel" parent="CanvasLayer/SideControl"]
margin_top = 216.0
margin_right = 360.0
margin_bottom = 1080.0
theme = SubResource( 4 )

[node name="RightPanel" type="Panel" parent="CanvasLayer/SideControl"]
margin_left = 360.0
margin_top = 216.0
margin_right = 720.0
margin_bottom = 1080.0
theme = SubResource( 4 )

[node name="ResetButtonControl" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 240.0

[node name="ResetButton" type="TouchScreenButton" parent="ResetButtonControl"]
visible = false
position = Vector2( 64, 64 )
scale = Vector2( 0.188, 0.188 )
z_index = 3
normal = ExtResource( 12 )

[node name="MenuButtonControl" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -720.0
margin_bottom = -840.0

[node name="MenuButton" type="TouchScreenButton" parent="MenuButtonControl"]
visible = false
position = Vector2( 560, 64 )
scale = Vector2( 0.188, 0.188 )
z_index = 3
normal = ExtResource( 13 )

[node name="LeftButtonControl" type="Control" parent="."]
margin_bottom = 40.0
grow_horizontal = 2

[node name="LeftButton" type="TouchScreenButton" parent="LeftButtonControl"]
position = Vector2( 0, 720 )
z_index = 3

[node name="RightButtonControl" type="Control" parent="."]
margin_bottom = 40.0

[node name="RightButton" type="TouchScreenButton" parent="RightButtonControl"]
position = Vector2( 360, 720 )
z_index = 3
